# freezing_mice

./: README.md  USAGE_EXAMPLES.md  calculate_dataset_weights.py  comparative_visualisations.py  create_timeline_visualization.py  evaluate_predictions.py  extract_behavior_examples.py  find_video_lengths_to_csv.py  label_mouse_behavior_with_gemini.py  label_mouse_behavior_with_qwen.py  main.py  make_short_predictions.py  pyproject.toml  requirements.txt  test_qwen_integration.py
src/config/: prompts.py
src/models/: mouse_behavior.py
src/scoring/: advanced_metrics.py  evaluator.py  temporal_analysis.py
src/utils/: __init__.py  gcs_utils.py  gemini_client.py  qwen_client.py  renewal_baseline.py  time_utils.py
